Industrial Tree + Character Update

--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -158,12 +158,35 @@
  RAJ_harcourt_butler:0 "Harcourt Butler"
  RAJ_michael_o_dwyer:0 "Micheal O'Dwyer"
  RAJ_ludovic_porter:0 "Ludovic Porter"
- RAJ_robert_nathan:0 "Robert Nathan"
+ RAJ_john_maffey:0 "John Maffey"
+ RAJ_dorabji_tata:0 "Dorabji Tata"
  RAJ_bryce_chudleigh_burt:0 "Bryce Chudleigh Burt"
  RAJ_richard_burn:0 "Richard Burn"
  RAJ_edward_charles_buck:0 "Edward Charles Buck"
  RAJ_havelock_charles:0 "Havelock Charles"
-
+ 
+ # Traits
+ RAJ_viceroy_and_governor_general_of_india:0 "Viceroy and Governor-General of India"
+ RAJ_provisional_viceroy_and_governor_general_of_india:0 "Provisional Viceroy and Governor-General of India"
+ RAJ_chief_of_staff:0 "Chief of Staff, India"
+ RAJ_reformer:0 "Reformer"
+ RAJ_caring_bureaucrat:0 "Caring Bureaucrat"
+ RAJ_careerist:0 "Careerist"
+ RAJ_treading_the_line:0 "Treading the Line"
+ RAJ_the_lion_of_punjab:0 "The Lion of Punjab"
+ 
+ RAJ_indian_industrialist:0 "Indian Industrialist"
+ RAJ_shadow_cabinet:0 "Shadow Cabinet"
+ RAJ_frontiersman:0 "Frontiersman"
+ RAJ_governor_of_burma:0 "Governor of Burma"
+ RAJ_governor_of_punjab:0 "Governor of Punjab"
+ RAJ_secretary_of_the_education_department:0 "Secretary of the Education Department"
+ RAJ_president_of_the_sedition_committee:0 "President of the Sedition Committee"
+ RAJ_deputy_director_of_agriculture:0 "Deputy-Director of Agriculture"
+ RAJ_editor_of_the_imperial_gazetteer:0 "Editor of the Imperial Gazetteer"
+ RAJ_grand_old_man_of_indian_agriculture:0 "''Grand Old Man'' of Indian Agriculture"
+ RAJ_the_kings_surgeon:0 "The King's Surgeon"
+ 
  ##########
  # EVENTS #
  ##########
@@ -745,15 +768,19 @@ RAJ_tackle_stagflation_desc:0 "Under our rule, the Indian economy is in a state 
 
 RAJ_nullify_the_partition_of_bengal:0 "Nullify the Partition of Bengal"
 RAJ_nullify_the_partition_of_bengal_desc:0 "In 1905, Lord Curzon, then Viceroy of India, made the decision to partition the Bengal presidency into more provinces, along religious lines. Although the partition was ostensibly designed to facilitate the administration of the regions, it was met with considerable resistance from the Indian population, particularly the §YIndian National Congress§!. In order to demonstrate our good will and commitment to the development of Bengal, it is imperative that the nullification of the partition of the province be enacted."
+RAJ_nullify_the_partition_of_bengal_reward:0 "\nModify '§YDe-Industrialisation§!' by:\nFactory Output:§R -10.00%§!\n§YMilitary Factory§! construction speed:§R -20.00%§!\n§YCivilian Factory§! construction speed:§R -20.00%§!\n\n"
 
 RAJ_indian_iron_and_steel_company:0 "Bengal Iron and Steel Company"
 RAJ_indian_iron_and_steel_company_desc:0 ""
+improve_resource_gain_efficiency_reward:0 "\nModify '§YDe-Industrialisation§!' by:\nRessource Gain Efficiency:§G +2.50%§!\n\n"
 
 RAJ_hardinge_bridge_railway:0 "Hardinge's Bridge Railway"
 RAJ_hardinge_bridge_railway_desc:0 "In 1889, the Eastern Bengal Railway proposed the construction of a railway bridge over the Padma River with the intention of facilitating communication between Calcutta and the, then, Eastern Bengal and Assam. In 1902, Sir FJE Spring prepared a report on the bridge. With the planning of such infrastructure now complete, it is now possible to direct resources towards the construction of the bridge."
+RAJ_hardinge_bridge_railway_reward:0 "Modify '§YDe-Industrialisation§!' by:\nFactory Output:§G +5.00%§!\n§YMilitary Factory§! construction speed:§G +10.00%§!\n§YCivilian Factory§! construction speed:§G +10.00%§!\n\n"
 
 RAJ_form_bihar_and_horissa:0 "Form Bihar and Horissa"
 RAJ_form_bihar_and_horissa_desc:0 "With our latest investment in the Bengal presidency, we can now once again separate Bihar and Orissa provinces in an effort to facilitate the administration of these regions without facing a backlash from the Indian population."
+RAJ_form_bihar_and_horissa_reward:0 "Modify '§YDe-Industrialisation§!' by:\nProduction Efficiency Cap:§G +5.00%§!\nFactory Output:§G +5.00%§!\n\n"
 
 RAJ_dhamrai_hardinge_school:0 "Dhamrai Hardinge's School"
 RAJ_dhamrai_hardinge_school_desc:0 "Our recent successes in the Bengal region have allowed us to devote even more resources to the development of the region and its people. In an effort to educate the masses of Bengal, the opening of a government school is of paramount importance."
@@ -761,11 +788,9 @@ RAJ_ramp_up_sugar_export:0 "Ramp-up Sugar Exports"
 RAJ_ramp_up_sugar_export_desc:0 "While other industries on the subcontinent have been struggling, sugar production, which is mostly exported to London, has been booming. Developing other agricultural sectors might benefit the local population, but it would be very costly with no real benefit to the Crown. We should capitalise even more on our sugar industry and reap the profits as soon as possible."
 improve_research_speed_reward:0 "Modify '§YDe-Industrialisation§!' by:\nResearch Speed:§G +5.00%§!"
 
-RAJ_support_local_farmers:0 "Support Local Farmers"
-RAJ_support_local_farmers_desc:0 "The Raj has had its share of famines in its history. They are caused mainly by the general apathy of our administration towards the welfare of the Indian population. By supporting local farmers, we could effectively deal with poverty and alleviate much of the hardship faced by the Indian people, although it would require a much greater amount of resources to develop than other, more profitable crops."
-
 RAJ_support_irrigation_projects:0 "Support Irrigation Projects"
 RAJ_support_irrigation_projects_desc:0 "The Raj currently has the largest irrigation system in the world, and by 1900 the amount of irrigated land had increased eightfold. Our work in creating more irrigable land has been fruitful and we must not backtrack now."
+RAJ_support_irrigation_projects_reward:0 "Modify '§YDe-Industrialisation§!' by:\nStability:§G +5.00%§!\nMax Factories in a State:§G +10%§!\n\n"
 
 RAJ_banaras_hindu_university:0 "Banaras Hindu University"
 RAJ_banaras_hindu_university_desc:0 "The Banaras Hindu University was founded by a number of Indian philanthropists, industrialists and nationalist sympathisers. While their aims often clashed with those of the Raj, the University has lifted thousands out of ignorance and allowed us to find more and more bright-minded individuals among the Indian masses."
@@ -799,9 +824,11 @@ RAJ_invest_in_calcutta_desc:0 "First base of operation of the East India Company
 
 RAJ_shift_to_military_production:0 "Shift to Military Production"
 RAJ_shift_to_military_production_desc:0 ""
+RAJ_shift_to_military_production_reward:0 "Modify '§YDe-Industrialisation§!' by:\nFactory Output:§G +2.50%§!\n§YMilitary Factory§! construction speed:§G +20.00%§!"
 
 RAJ_shift_to_industrial_production:0 "Shift to Industrial Production"
 RAJ_shift_to_industrial_production_desc:0 ""
+RAJ_shift_to_industrial_production_reward:0 "Modify '§YDe-Industrialisation§!' by:\nFactory Output:§G +2.50%§!\n§YCivilian Factory§! construction speed:§G +20.00%§!"
 
 RAJ_imperial_bank_of_india:0 "Imperial Bank of India"
 RAJ_imperial_bank_of_india_desc:0 ""
@@ -812,21 +839,31 @@ RAJ_military_developments_reward:0 "The benefits of this national focus will §G
 
 RAJ_refurbish_kirkee_arsenal:0 "Refurbish Kirkee Arsenal"
 RAJ_refurbish_kirkee_arsenal_desc:0 ""
+RAJ_refurbish_kirkee_arsenal_reward:0 "Modify '§YDe-Industrialisation§!' by:\nFactory Output:§G +2.50%§!\n\n"
 
 RAJ_tata_steel_ltd:0 "Tata Steel Ltd."
 RAJ_tata_steel_ltd_desc:0 ""
 
 RAJ_burmah_oil:0 "Burmah Oil"
 RAJ_burmah_oil_desc:0 ""
+RAJ_burmah_oil_reward:0 "Modify '§YDe-Industrialisation§!' by:\nRessource Gain Efficiency:§G +5.00%§!\nConsumer Goods Factories factor:§Y -5.0%§!\nResources to Market:§Y +5%§!\n\n"
+RAJ_burmah_oil_reward_2:0 "\n§RIf §YHarcourt Butler§! is hired as advisor, the effect of this focus will increase.§!"
 
 RAJ_focus_on_raw_materials_exports:0 "Focus on Raw Materials Exports"
 RAJ_focus_on_raw_materials_exports_desc:0 ""
+RAJ_focus_on_raw_materials_exports_reward:0 "Modify '§YDe-Industrialisation§!' by:\nRessource Gain Efficiency:§G +10.00%§!\nConsumer Goods Factories factor:§Y -10.0%§!\nStability:§R -5.00%§!\nResources to Market:§Y +5%§!"
 
 RAJ_domestic_industry:0 "Domestic Industry"
 RAJ_domestic_industry_desc:0 ""
+RAJ_domestic_industry_reward:0 "Modify '§YDe-Industrialisation§!' by:\nConsumer Goods Factories factor:§Y +5.0%§!\nStability:§G +5.00%§!\nProduction Efficiency Cap:§G +5.00%§!\nFactory Output:§G +5.00%§!\n§YMilitary Factory§! construction speed:§R -5.00%§!"
 
 RAJ_increase_provincial_taxes:0 "Increase Provincial Taxes"
 RAJ_increase_provincial_taxes_desc:0 ""
+RAJ_increase_provincial_taxes_reward:0 "Modify '§YDe-Industrialisation§!' by:\nConsumer Goods Factories factor:§Y -10.0%§!\nStability:§R -5.00%§!\nFactory Output:§G +5.00%§!"
+
+RAJ_support_local_farmers:0 "Support Local Farmers"
+RAJ_support_local_farmers_desc:0 "The Raj has had its share of famines in its history. They are caused mainly by the general apathy of our administration towards the welfare of the Indian population. By supporting local farmers, we could effectively deal with poverty and alleviate much of the hardship faced by the Indian people, although it would require a much greater amount of resources to develop than other, more profitable crops."
+RAJ_support_local_farmers_reward:0 "Modify '§YDe-Industrialisation§!' by:\nConsumer Goods Factories factor:§Y +5.0%§!\nStability:§G +5.00%§!\nProduction Efficiency Cap:§G +5.00%§!"
 
 # Army Tree
 RAJ_indian_army_act:0 "Indian Army Act"
