some army tree stuff

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -443,7 +443,7 @@
  home_defense_focus:0 "Home Defense"
  home_defense_focus_desc:0 "We will turn our country into a gigantic fortress that only a madman wants to attack."
 
- # Feudal Politics
+ # Feudal Tree
  FEU_def_country_name:0 "[FROM.GetNameDefCap]"
  FEU_secure_internal_politics:0 "Secure Internal Politics"
  FEU_strengthen_ruler_position:0 "Strengthen [FROM.GetLeader]'s Position"
@@ -456,7 +456,6 @@
  FEU_westernisation:0 "Westernisation"
  FEU_westernisation_desc:0 "Although our people may not agree with our policies, we know that the way forward for our nation is through reforms and social progress."
  FEU_draft_a_constitution:0 "Draft a Constitution"
-
  FEU_our_place_in_the_world:0 "Our Place in the World"
  FEU_our_place_in_the_world_desc:0 "The [DAR.GetAdjectiveCap] people have a complex history with deep-rooted traditions. It is imperative for a great nation like ours to assert its position in the world."
  FEU_secure_our_independence:0 "Secure our Independence"
@@ -473,6 +472,16 @@
  FEU_purchase_foreign_arms:0 "Purchase Foreign Arms"
  FEU_purchase_foreign_equipment:0 "Purchase Foreign Equipment"
  FEU_purchase_foreign_artillery:0 "Purchase Foreign Artillery"
+
+FEU_the_adjective_armed_forces:0 "The [ROOT.GetAdjective] Armed Forces"
+FEU_warrior_tradition:0 "Warrior Tradition"
+FEU_strengthen_the_irregulars:0 "Strengthen the Irregulars"
+FEU_every_man_a_warrior:0 "Every Man a Warrior"
+FEU_reform_the_conscription:0 "Extend the Conscription System"
+FEU_names_finest:0 "[ROOT.GetAdjective] Cavalry"
+FEU_utilize_our_strengths:0 "Use Everything We Have"
+FEU_encourage_local_arms_production:0 "Local Arms Production"
+
  ##########
 
  uk_focus:0 "United Kingdom Focus Tree"
