--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -50,6 +50,9 @@
  decision_cost_CP_50_5_civ:0 "£command_power §Y50§! £civ_factory£ §Y5§!"
  decision_cost_CP_50_5_civ_blocked:0 "£command_power §R50§! £civ_factory£  §R5§!"
  decision_cost_CP_50_5_civ_tooltip:0 "It costs £command_power §Y50§! £civ_factory£ §Y5§! to take the decision"
+ decision_cost_CP_50:0 "£command_power §Y50§!"
+ decision_cost_CP_50_blocked:0 "£command_power §R50§!"
+ decision_cost_CP_50_tooltip:0 "It costs £command_power §Y50§! to take the decision"
  decision_cost_CP_50_10_civ:0 "£command_power §Y50§! £civ_factory£ §Y10§!"
  decision_cost_CP_50_10_civ_blocked:0 "£command_power §R50§! £civ_factory£  §R10§!"
  decision_cost_CP_50_10_civ_tooltip:0 "It costs £command_power §Y50§! £civ_factory£ §Y10§! to take the decision"
@@ -8591,6 +8594,21 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  JAP_invade_kiautschou_mission_tt:0 "§Y1 Division§! composed with §YInfantry units§! will by deployed to §YShandong!."
  JAP_seize_shandong_anyway:0 "Seize [872.GetName] from [FROM.GetName]"
  JAP_seize_shandong_anyway_desc:0 "To wage war effectively, we need to take the Shandong Peninsula, whether Kiautschou is in our hands or not - the Chinese wouldn't dare resist anyway - and we can add that the rationale is to seize enemy assets in the province."
+ JAP_buying_ships:0 "Eight-Eight Fleet Program"
+ JAP_buying_ships_desc:0 "The development of the Imperial Japanese Navy, which stipulated that the navy should include eight first-class battleships and eight armoured cruisers or battlecruisers has been planned."
+ JAP_heavy_ship_name_text:0 "Battleships"
+ JAP_cruiser_ship_name_text:0 "Cruisers"
+ JAP_destroyer_ship_name_text:0 "Destroyers"
+ jap_num_battleships:0 "[?jap_num_battleships_built|0] / [?jap_num_battleships|0]"
+ jap_num_cruisers:0 "[?jap_num_cruisers_built|0] / [?jap_num_cruisers|0]"
+ jap_num_destroyers:0 "[?jap_num_destroyers_built|0] / [?jap_num_destroyers|0]"
+ JAP_expansion_plan_title:0 ""
+ JAP_expansion_plan_completion_title:0 "Effect if completed:"
+ jap_naval_expansion_stability_amount:0 "§G[?jap_naval_expansion_stability_amount|0]%§!"
+ jap_naval_expansion_pp_amount:0 "§G[?jap_naval_expansion_pp_amount|0]§!"
+ JAP_order_kongo_battleship:0 "Order Kongo Class Battleship 'Kongo'"
+ JAP_buying_ships_from_USA:0 "[ROOT.GetName] is buying ship from [USA.getName]"
+ has_ordered_kongo_battleship:0 "Has ordered the Kongo class battleship 'Kongo'"
 
  austrian_galicia:0 "Austrian Galicia"
  bosnian_revolt:0 "Bosnian Revolt"
