--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2725,6 +2725,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  JAP_hirohito_regent:0 "Regent Hirohito"
  JAP_idea_ansei_treaties:0 "Ansei Treaties"
  JAP_idea_ansei_treaties:0 "The last shogunate had been cheated by the western powers, blinded bureaucracy had agreed to sign the unfair treaties with those swindlers, even with no recognisation from the Emperor." #Since we have no strength to demand them pullout and cancel the agreements, negotiation foward can be a way to solve them out.
+ JAP_idea_buying_ships:0 "Warship Payment"
 
  #Chile
  CHL_prussian_army:0 "Prussian Tradition"
