--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5980,15 +5980,51 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_allign_with_the_egyptian_clergy_desc:0 "Muslim clergy and imams in the Egyptian society oppose Egyptian conflict against the legitimate Ottoman Caliphate. By alligning with the clergy, we can use religion to influence the common people"
  TUR_allign_with_the_egyptian_conscripts:0 "Allign with the Egyptian Conscripts"
  TUR_allign_with_the_egyptian_conscripts_desc:0 "Many low ranking conscripts within the Egyptian armed forces oppose Egyptian war against our empire. By alligning with the Egyptian conscripts, we can sabotage the Egyptian war effort."
+ TRS_disband_weapon_workshops:0 "Disband Weapon Workshops"
+ TRS_disband_weapon_workshops_desc:0 "Though weapon workshops have proven themselves to be useful in dire times, they've outlived their necessities. As the arsenal they produce is rather in low quality, they cause more trouble than benefit."
  TRS_forced_labor_abolished:0 "Has not selected §YAbolish Forced Labor§!"
+ TRS_concentrate_forced_labor_on_infrastructure:0 "Concentrate Forced Labor on Infrastructure"
+ TRS_concentrate_forced_labor_on_infrastructure_desc:0 "Our current policy on forced labor fails to focus on required areas. Instead of having a generalized plan, its more effective to concentrate our efforts on infrastructure."
+ TRS_concentrate_forced_labor_on_civilian_industry:0 "Concentrate Forced Labor on Civilian Industry"
+ TRS_concentrate_forced_labor_on_civilian_industry_desc:0 "Our current policy on forced labor fails to focus on required areas. Instead of having a generalized plan, its more effective to concentrate our efforts on civilian industry."
+ TRS_concentrate_forced_labor_on_military_industry:0 "Concentrate Forced Labor on Military Industry"
+ TRS_concentrate_forced_labor_on_military_industry_desc:0 "Our current policy on forced labor fails to focus on required areas. Instead of having a generalized plan, its more effective to concentrate our efforts on military industry."
+ TRS_abolish_forced_labor:0 "Abolish Forced Labor"
+ TRS_abolish_forced_labor_desc:0 "Though we've seen the benefits of force labor, we can't continue it indefinitely. Due to its high unpopularity, perhaps its time to abolish forced labor in the Ottoman provinces under our control."
  TRS_utilize_forced_labor_tt: "Modify §YCemâl's Syria§! by\n£construction_speed_texticon  Construction Speed: §R-20.00%§!\n£factory_output_texticon  Factory Output: §R-20.00%§!\n\n"
  TRS_utilize_forced_labor_tt2: "Modify §YCemâl's Syria§! by\n£construction_speed_texticon  Construction Speed: §G+20.00%§!\n£factory_output_texticon  Factory Output: §G+20.00%§!\n\n"
+ TRS_syrian_industrialization_initiative:0 "Syrian Industrial Initiative"
+ TRS_syrian_industrialization_initiative_desc:0 "Syria lacks greatly in industry. Instead of relying on the central government, we must take matters into our own hands. Through hard work and enough time, we can start industrializing Syria."
+ TRS_tooth_and_nail_effort:0 "Tooth and Nail Effort"
+ TRS_tooth_and_nail_effort_desc:0 "Industrialization project is taking longer than we've anticipated. If we force our workers to work with their teeth and nails, we can accelerate the construction."
+ TRS_utilize_forced_labor:0 "Utilize Forced Labor"
+ TRS_utilize_forced_labor_desc:0 "Forced labor policy that currently in effect already benefit us in various ways. We can use forced labor to also increase the construction of industry in Syria."
+ TRS_divert_factory_usage:0 "Divert Factory Usage"
+ TRS_divert_factory_usage_desc:0 "Syria has their own factories, producing their own necessary stuff. Yet if we focus most of these factories into aiding our industrialization effort, we can expect faster progress."
+ TRS_abolish_war_taxes:0 "Abolish War Taxes"
+ TRS_abolish_war_taxes_desc:0 "Though the revenue we get from war taxes are detrimental for our growth, keeping it for too long will prove to be catastrophic for our population. Perhaps the wisest move to make would be to abolish it before its too late."
+ TRS_education_reforms_category:0 "Education Reforms"
+ TRS_establish_selahaddin_i_eyyubi_complex:0 "Estanlish Selahaddin-i Eyyubi Complex"
+ TRS_establish_selahaddin_i_eyyubi_complex_desc:0 "Being a great Muslim conqueror, Selahaddin-i Eyyubi holds an important place in Muslim history. He fits as the perfect person to name our new educational complex after. In this complex, we'll seek to research the history of Islam as well as other subjects, resulting in increased education and capitalizing on the power of Islam."
  TRS_establish_selahaddin_i_eyyubi_complex_tt:0 "Modify §YCrippling Illiteracy§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n\n"
+ TRS_expand_boarding_schools:0 "Expand Boarding Schools"
+ TRS_expand_boarding_schools_desc:0 "As our empire has no shortage in orphans, they must be taken care of and educated in a way. Establishing boarding schools will allow us to both educate, and assimilate, these students."
  TRS_expand_boarding_schools_tt:0 "Modify §YCrippling Illiteracy§! by\n£population_texticon  Monthly Population: §R-3.0%§!\n£manpower_texticon  Recruitable Population Factor: §R-1%§!\n£research_speed_texticon  Research Speed: §G+3.00%§!\n\n"
+ TRS_school_of_agriculture:0 "School of Agriculture"
+ TRS_school_of_agriculture_desc:0 "Our citizens in the provinces under our control lacks the knowledge to properly use modern equipment for agriculture. If we teach them how to use them, it will result in increased experties and more efficient equipment usage."
  TRS_school_of_agriculture_tt:0 "Modify §YCrippling Illiteracy§! by\n£research_speed_texticon  Research Speed: §G+2.00%§!\n£factory_output_texticon  Factory Output: §G+7.00%§!\n\n"
+ TRS_technical_and_industrial_school:0 "Technical and Industrial School"
+ TRS_technical_and_industrial_school_desc:0 "The provinces under our control critically lacks the eligible man to work in technical, engineering and industrial jobs. Through proper education, we can improve production and research methods on various subjects."
  TRS_technical_and_industrial_school_tt:0 "Modify §YCrippling Illiteracy§! by\n£research_speed_texticon  Research Speed: §G+3.00%§!\n£factory_output_texticon  Factory Output: §G+8.00%§!\n\n"
+ TRS_expand_french_educational_institutions:0 "Expand French Educational Institutions"
+ TRS_expand_french_educational_institutions_desc:0 "France is a power that has already established itself in the region with its educational institutions. Expanding them will drastically help with our education endeavours in the region."
  TRS_expand_french_educational_institutions_tt:0 "Modify §YCrippling Illiteracy§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n\n"
+ TRS_orient_mission_of_austria:0 "Orient Mission of Austria"
+ TRS_orient_mission_of_austria_desc:0 "As our literacy rate is quite low in the provinces under our control, Austria has offered to undertake education endeavours. Though it will end up in the increase of foreign Austrian influence, it will drastically improve education levels."
  TRS_orient_mission_of_austria_tt:0 "Modify §YCrippling Illiteracy§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n\n"
+ TRS_mobile_headquarters_decision_category:0 "Mobile Headquarters"
+ TRS_mobile_headquarters_decision:0 "Relocate Headquarters to [FROM.GetName]"
+ TRS_mobile_headquarters_decision_desc:0 "As this region needs him the most, Ahmed Cemâl Paşa will relocate its headquarters to [FROM.GetName], ensuring everything is safe and sound."
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
