--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5099,10 +5099,12 @@
  TUR_rewarding_loyalties:0 "Rewarding Loyalties"
  TUR_rewarding_loyalties_desc:0 "Above capabilities, Cemâl Paşa values loyalty more than anything. Turk, Arab, Kurd or Armenian, those who stand loyal to him will be rewarded while those standing against him will be punished. His strict importance to loyalty makes his inner circle trustable and easy to control."
  TUR_rewarding_loyalties_tt:0 "Modify §YCemâl's Syria§! by\n£political_advisor_cost_texticon  Political Advisor Cost: §G-50%§!\n\n"
+ TUR_mobile_headquarters:0 "Mobile Headquarters"
+ TUR_mobile_headquarters_desc:0 "Cemâl is a man that will not leave his work to chance. He's a man that'll go out of his way to make sure everything is running smoothly. To ensure everything is fine in the Syrian lands, he himself will travel through provinces."
+ TUR_mobile_headquarters_tt:0 "Modify §YCemâl's Syria§! by\n£surrender_texticon  Surrender Limit: §G+5.00%§!\n\n"
  TUR_governor_of_aleppo:0 "Governor of Aleppo"
  TUR_governor_of_aleppo_desc:0 "Our appointment has brough a new era for the governance of Syria. Under our leadership, there won't be no disloyal rulers left in Syria. As Aleppo stands in between Syria and Anatolia, we have to place a loyal follower of Cemâl in command."
  TUR_governor_of_aleppo_tt:0 "An §Yevent chain§! will start for us to decide whether we'll change the §YGovernor of Aleppo§!, or keep §YBekir Sami Bey§! in his post."
- TUR_mobile_headquarters_tt:0 "Modify §YCemâl's Syria§! by\n£surrender_texticon  Surrender Limit: §G+5.00%§!\n\n"
  TUR_bring_halide_edib_adivar_tt1:0 "Modify §YCemâl's Syria§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n\n"
  TUR_bring_halide_edib_adivar_tt2:0 "§YHalide Edib Hanım§!(@TUR) joins §Y[FROM.GetNameDef]§!\n"
  TUR_war_taxes_tt:0 "Modify §YCemâl's Syria§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-20%§!\n£stability_texticon  Weekly Stability: §R-1.00%§!\n\n"
@@ -5188,7 +5190,7 @@
  TUR_utilize_camel_companies:0 "Utilize Camel Companies"
  TUR_utilize_camel_companies_desc:0 "Camelry has been already used as reconnaissance in our southern lands. By utilizing camelry further, we can detach them to our units and aid them with traversing the desert."
  TUR_utilize_camel_companies_tt:0 "Modify §YOttoman 4th Army§! by\n£tank_design_cost_texticon  Camelry Unit Design Cost: §G-100.00%§!\n\nEnables §YCamelry Recon Detachment§!\n§HInfantry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!\n§HCavalry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!\n§HCamelry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!"
- TUR_form_yildirim_army_group:0 "From Yıldırım Army Group"
+ TUR_form_yildirim_army_group:0 "Form Yıldırım Army Group"
  TUR_form_yildirim_army_group_desc:0 "Ottoman 4th army command is not sufficient at fulfilling its duties. As military situation at the front worsenes due to this reason, it'd be best to dissolve Ottoman 4th army and establish Yıldırım army goup in its place."
  TUR_form_yildirim_army_group_tt:0 "Modify §YOttoman 4th Army§! by\n£battalion_limit_count_texticon  Batalion Count Limit: §Y+100§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
  TUR_appoint_kucuk_cemal:0 "Appoint Küçük Cemal"
