--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1086,6 +1086,14 @@
  TRS_reconfiguring_foreign_policy_desc:0 "Our recent coup, alongside our internal politics, has left our diplomatic relations in disarray. While dropping out of the war resulted in a base support from our population, it also left us unable to maneuver through the international arena."
  TRS_cemals_syria:0 "Cemâl's Syria"
  TRS_cemals_syria_desc:0 "As Ahmed Cemâl Paşa has been assigned with the task of reforming the Syrian lands, he is given a wide range of autonomoy of action. As his decisions will directly shape Syria, it will have profound effects on the state, society and its components."
+ TRS_weapon_workshops:0 "Weapon Workshops"
+ TRS_weapon_workshops_desc:0 "The weapon workshops we've opened, though lacking in quality, allows us to somewhat compensate for our lack of military factories in the provinces under our control."
+ TRS_french_influence:0 "French Influence"
+ TRS_french_influence_desc:0 "As the French backed education endeavours spread in our provinces, we see troubles with securing the loyalty of the people. We've started to see some locals siding with the foreign power rather than their own nation."
+ TRS_austrian_influence:0 "Austrian Influence"
+ TRS_austrian_influence_desc:0 "As the Austrian backed education endeavours spread in our provinces, we see troubles with securing the loyalty of the people. We've started to see some locals siding with the foreign power rather than their own nation."
+ TRS_mobile_headquarters_dm:0 "Mobile Headquarters"
+ TRS_mobile_headquarters_dm_desc:0 "As Ahmed Cemâl Paşa is currently located in this province, his presence boosts friends and deters foes.\n\n§RLosing control of this state will displace Ahmed Cemâl Paşa to a random neighboring state that we control§!"
 
  AUH_austrian_integration:0 "Austrian Integration"
  AUH_condominium_of_bosnia_and_herzegovina:0 "Condominium of Bosnia and Herzegovina"
