--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8578,7 +8578,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_bavaria.3.a:0 "Long live Rupprecht I!"
  
  
- # BULGARIA
+ #BULGARIA
  ww1_bulgaria.1.t: "Invitation to Join the Central Powers"
  ww1_bulgaria.1.d: "The German Empire has accepted Bulgaria's demand for formal claims on Macedonia, Thrace, and Dobruja, in exchange for us joining the Central Powers. Popular support for this move is massive. Should we accept?"
  ww1_bulgaria.1.a: "Accept the Offer"
@@ -8738,6 +8738,15 @@ ww1_bulgaria.67.a: "One of the many benefits of smoking!"
 ww1_bulgaria.68.t: "Amending the Silver Constitution"
 ww1_bulgaria.68.d: "fill later"
 ww1_bulgaria.68.a: "Empower the Tsar!"
+
+ww1_bulgaria.69.t: "Turkish Opposition"
+ww1_bulgaria.69.d: "The territories once held by the Ottoman Empire now stand under Bulgarian rule, yet the local Turkish population remains resistant. Tensions are rising, and it seems something must be done to address the opposition. Should we enforce harsher policies or attempt to offer autonomy to calm the region?"
+ww1_bulgaria.69.a: "It's For Their Own Good!"
+ww1_bulgaria.69.b: "Perhaps an Autonomous Thrace would be Beneficial?"
+
+ww1_bulgaria.70.t: "Greek Opposition"
+ww1_bulgaria.70.d: "The newly acquired territories that once belonged to Greece are proving troublesome. Greek nationals in these areas remain loyal to their homeland, refusing to fully integrate into Bulgaria. Their defiance might need to be quashed, or should we wait and hope their resistance will wane?"
+ww1_bulgaria.70.a: "They'll Submit in Due Time"
 
 
  # ENGLAND
