--- a/localisation/russian/replace/replace_operatives_l_russian.yml
+++ b/localisation/russian/replace/replace_operatives_l_russian.yml
@@ -42,18 +42,18 @@
  upgrade_anti_partisan_desc:0 "§LПропаганда — мощный инструмент обеспечения верности собственных граждан, но завоевать лояльность жителей вражеской территории куда сложнее. Обучив наших агентов внедряться во вражеское сопротивление, мы, возможно, сможем эффективно бороться с ним и пресекать его диверсионную деятельность. Тогда-то вражеские партизаны и потеряют всякую надежду на возвращение своего прежнего режима.§!"
  upgrade_blueprint_stealing:0 "Кража чертежей"
  upgrade_blueprint_stealing_desc:0 "§LМы знаем, что у нашего противника есть секретные проекты экспериментального оружия и техники, но мы не в курсе, что именно разрабатывается в рамках этих проектов. Внедрившись в отдел экспериментального оружия наших противников, мы не только сможем узнать, что именно они планируют использовать против нас, но и получим уникальную возможность использовать эту информацию для развития собственного вооружения.§!"
- upgrade_portable_radios:0 "Портативные рации"
- upgrade_portable_radios_desc:0 "§LОбычные средства радиосвязи слишком крупны и малоподвижны, чтобы использовать их в скрытных операциях. Если создать компактные радиостанции и замаскировать их под обычные предметы вроде портфелей, наши агенты смогут быть на связи постоянно, не возбуждая подозрения.§!"
- upgrade_invisible_ink:0 "Невидимые чернила"
- upgrade_invisible_ink_desc:0 "§LС виду письмо, написанное невидимыми чернилами, — это обычный чистый лист бумаги, но ультрафиолетовое излучение или химикаты, например нашатырный спирт, проявляют его содержимое. Если принять за стандарт использование всеми нашими агентами невидимых чернил, наша информация останется скрытой даже при перехвате ее противником.§!"
- upgrade_plastic_explosives:0 "Пластит"
- upgrade_plastic_explosives_desc:0 "§LБлагодаря своей мастикоподобной текстуре пластит идеально подходит для подрыва вражеских производственных объектов, и потому будет естественно вооружить им партизан за рубежом. Взрывчатку можно легко разместить вне поля зрения врага в уязвимых местах вражеских объектов, а пластичность сделает ее идеальным оружием зрелищного политического убийства...§!"
- upgrade_suicide_pills:0 "Пилюли для самоубийства"
- upgrade_suicide_pills_desc:0 "§LНекоторая часть наших агентов будет схвачена врагами — это, к сожалению, неизбежно. Мы должны предложить им способ избежать ужаса, что ждет их в комнате допросов. Этим крайним способом станет пилюля с цианидом в зубе.§!"
+ upgrade_portable_radios:0 "Почтовые голуби"
+ upgrade_portable_radios_desc:0 "§LПоскольку противник обязательно проводит вскрытие писем и перехват телеграмм, агентам выгоднее всего передавать информацию через почтовых голубей.§!"
+ upgrade_invisible_ink:0 "Портативные камеры"
+ upgrade_invisible_ink_desc:0 "§LПортативные маленькие камеры - последнее слово в технологии шпионажа. Это быстрый способ записать секретную информацию, которая потребует фотографической обработки, прежде чем противник поймет, что запечатлено на снимке.§!"
+ upgrade_plastic_explosives:0 "Замаскированная взрывчатка"
+ upgrade_plastic_explosives_desc:0 "§LЭти бомбы прячут в неприметных консервах, упаковках или коробках, что делает их удобным методом саботажа. Бомбы можно легко разместить вне зоны видимости и в уязвимых местах вражеских фабрик, а пластичность вещества сделает его идеальным оружием зрелищного политического убийства...§!"
+ upgrade_suicide_pills:0 "Яд"
+ upgrade_suicide_pills_desc:0 "§LНекоторая часть наших агентов будет схвачена врагами — это, к сожалению, неизбежно. Мы должны предложить им способ избежать ужаса, что ждет их в комнате допросов. Этим крайним способом станет флакон с ядом в потайном кармане.§!"
  upgrade_training_centers:0 "Местные центры обучения"
  upgrade_training_centers_desc:0 "§LХотя наши агенты способны приспосабливаться к любому окружению, культурные нормы и языки других стран лучше всего усваиваются теми, кто родился и вырос в этой среде. Если мы хотим развернуть мировую шпионскую сеть, мы должны охватить центрами вербовки и обучения весь земной шар и нанимать агентов всех культур и биографий.§!"
- upgrade_commando_training:0 "Подготовка коммандос"
- upgrade_commando_training_desc:1 "§LХотя наш департамент обычно занимается более деликатными аспектами войны, зачастую для выполнения операций требуется небольшой отряд тяжеловооруженных бойцов. Обучив всех своих агентов боевым приемам коммандос, мы повысим их эффективность в диверсионных операциях, снизим вероятность обнаружения вражеской контрразведкой и научим их эффективней захватывать шифровальное оборудование противника.§!"
+ upgrade_commando_training:0 "Интенсивная подготовка"
+ upgrade_commando_training_desc:1 "§LХотя наш департамент обычно занимается более деликатными аспектами войны, зачастую для выполнения операций требуется небольшой отряд тяжеловооруженных бойцов. Если обучить всех наших агентов способам ведения тайной войны, мы повысим их эффективность в диверсионных операциях, снизим вероятность обнаружения вражеской контрразведкой и научим их эффективней захватывать шифровальное оборудование противника.§!"
  upgrade_interrogation_techniques:0 "Техника допроса"
  upgrade_interrogation_techniques_desc:0 "§LЧаще эффективнее бывает сломать разум вражеского агента, а не его тело. Применение физической силы в этом случае ненадежно и часто приводит к получению ложной информации. Мастер допроса способен сломить дух противника, не прибегая к насилию. У нас есть способы разговорить любого...§!"
  upgrade_diplo_training:0 "Дипломатическая подготовка"
@@ -62,10 +62,10 @@
  upgrade_psycho_warfare_desc:0 "§LПропаганда — мощный инструмент обеспечения наших идеологических интересов в нашем же государстве, но ни одно средство не сравнится в эффективности с распространением жутких слухов о вражеском режиме и последствиях его прихода в страну. Научив наших агентов сотрудничать с антиидеологическими движениями в других странах, мы сможем гораздо эффективнее распространять собственную идеологию по миру...§!"
  upgrade_form_department:0 "Образовать отдел"
  upgrade_form_department_desc:0 "§LКриптология — метод создания кодов и шифров для поддержания секретной связи. Не имея правильного кода, прочитать зашифрованное сообщение почти невозможно. Одинаково важно как зашифровывать свои сообщения, так и уметь дешифровать сообщения врагов.§!"
- upgrade_decryption_boost:1 "Группа радиоперехвата"
- upgrade_decryption_boost_desc:0 "§LРадиоволны позволяют общаться на больших расстояниях, и сигналы часто зашифровываются с помощью постоянной и нерегулярной смены частоты вещания. Чтобы перехватывать вражеские сообщения, мы должны создать группу радиоперехвата для взлома шифров противника.§!"
- upgrade_decryption_boost_2:1 "Машинное дешифрование"
- upgrade_decryption_boost_2_desc:0 "§LМашины уже доказали свою пользу в шифровании данных — взломать машинный код труднее всего. Машины для криптоанализа очень важны для расшифровки сообщений, кода к которым у нас пока нет. Эти машины очень пригодятся нашей команде дешифровщиков.§!"
+ upgrade_decryption_boost_2:1 "Группа радиоперехвата"
+ upgrade_decryption_boost_2_desc:0 "§LРадиоволны позволяют общаться на больших расстояниях, и сигналы часто зашифровываются с помощью постоянной и нерегулярной смены частоты вещания. Чтобы перехватывать вражеские сообщения, мы должны создать группу радиоперехвата для взлома шифров противника.§!"
+ upgrade_decryption_boost_2:1 "Группа по взлому кодов"
+ upgrade_decryption_boost_2_desc:0 "§LС большой долей вероятности важная информация, найденная нашими агентами, всегда зашифрована. В этом случае необходимо подготовить опытную команду, которая займется расшифровкой.§!"
  upgrade_crypto_strength:1 "Правительственная школа шифровальщиков"
  upgrade_crypto_strength_desc:0 "§LКоды и шифры показали себя самым эффективным способом развития и защиты нашей зарубежной шпионской сети. Правительственный штаб связи посвятил себя созданию новых сложных методов шифрования, которые не сможет взломать противник.§!"
  upgrade_crypto_strength_2:0 "Машинное шифрование"
