--- a/localisation/russian/ww1_focus_l_russian.yml
+++ b/localisation/russian/ww1_focus_l_russian.yml
@@ -847,7 +847,7 @@
  ENG_fund_loyalist_paramilitaries:0 "Финансировать лоялистские формирования"
  ENG_fund_loyalist_paramilitaries_desc:0 "Либералы пытались настаивать на самоуправлении Ирландии. Это неприемлемо! Вместо этого мы поступим наоборот - добровольческие силы Ольстера будут очень рады получить нашу тайную поддержку..."
  ENG_preemptive_strikes:0 "Превентивные удары"
- ENG_preemptive_strikes_desc:0 "Немецкий флот открытого моря растет, и мы должны быть готовы. Заблаговременно "обезопасив" Норвегию, Исландию и Гренландию, мы сможем получить базы, необходимые для удержания Атлантики под контролем Британии."
+ ENG_preemptive_strikes_desc:0 "The German threat grows, the war is inevitable, so we must have it on out own terms."
  ENG_increase_indian_trade:0 "Расширить торговлю с Индией"
  ENG_increase_indian_trade_desc:0 "Индия является огромным источником богатства для империи. Нам было бы неплохо укрепить наши связи там."
  ENG_churchill_factor:0 "Фактор Черчилля"
