--- a/localisation/russian/ww1_victory_points_l_russian.yml
+++ b/localisation/russian/ww1_victory_points_l_russian.yml
@@ -670,6 +670,8 @@
  VICTORY_POINTS_12338: "Джалпайгури"
  VICTORY_POINTS_9973: "Горакхпур"
  VICTORY_POINTS_10772: "Ферозепур"
+ VICTORY_POINTS_9588: "Баня-Лука"
+ VICTORY_POINTS_3984: "Крагуевац"
  
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
