--- a/localisation/russian/replace/replace_tank_modules_l_russian.yml
+++ b/localisation/russian/replace/replace_tank_modules_l_russian.yml
@@ -1,43 +1,43 @@
 ﻿l_russian:
- light_tank_chassis_0:0 "Early Light Tank Chassis"
- basic_light_tank_chassis_short:0 "1917 Light"
- improved_light_tank_chassis_short:0 "1919 Light"
- advanced_light_tank_chassis_short:0 "1922 Light"
- medium_tank_chassis_0:0 "Early Medium Tank Chassis"
- basic_medium_tank_chassis_short:0 "1917 Medium"
- improved_medium_tank_chassis_short:1 "1919 Medium"
- advanced_medium_tank_chassis_short:0 "1922 Medium"
- heavy_tank_chassis_0:0 "Early Heavy Tank Chassis"
- basic_heavy_tank_chassis_short:0 "1917 Heavy"
- improved_heavy_tank_chassis_short:1 "1919 Heavy"
- advanced_heavy_tank_chassis_short:0 "1922 Heavy"
- gwtank_chassis:0 "Prototype Tank Development"
- light_tank_equipment_0:0 "Early Light Tank"
- medium_tank_equipment_0:0 "Early Medium Tank"
- heavy_tank_equipment_0:0 "Early Heavy Tank"
- light_tank_flame_equipment_0:0 "Early Light Flame Tank"
- medium_tank_flame_equipment_0:0 "Early Medium Flame Tank"
- heavy_tank_flame_equipment_0:0 "Early Heavy Flame Tank"
- light_tank_aa_equipment_0:0 "Early Light AA Tank"
- medium_tank_aa_equipment_0:0 "Early Medium AA Tank"
- heavy_tank_aa_equipment_0:0 "Early Heavy AA Tank"
- light_tank_destroyer_equipment_0:0 "Early Light Tank Destroyer"
- medium_tank_destroyer_equipment_0:0 "Early Medium Tank Destroyer"
- heavy_tank_destroyer_equipment_0:0 "Early Heavy Tank Destroyer"
- light_tank_artillery_equipment_0:0 "Early Light SP Artillery"
- medium_tank_artillery_equipment_0:0 "Early Medium SP Artillery"
- heavy_tank_artillery_equipment_0:0 "Early Heavy SP Artillery"
+ light_tank_chassis_0:0 "Шасси раннего легкого танка"
+ basic_light_tank_chassis_short:0 "Легкий 1917"
+ improved_light_tank_chassis_short:0 "Легкий 1919"
+ advanced_light_tank_chassis_short:0 "Легкий 1922"
+ medium_tank_chassis_0:0 "Шасси раннего среднего танка"
+ basic_medium_tank_chassis_short:0 "Средний 1917"
+ improved_medium_tank_chassis_short:1 "Средний 1919"
+ advanced_medium_tank_chassis_short:0 "Средний 1922"
+ heavy_tank_chassis_0:0 "Шасси раннего тяжелого танка"
+ basic_heavy_tank_chassis_short:0 "Тяжелый 1917"
+ improved_heavy_tank_chassis_short:1 "Тяжелый 1919"
+ advanced_heavy_tank_chassis_short:0 "Тяжелый 1922"
+ gwtank_chassis:0 "Создание прототипа танка"
+ light_tank_equipment_0:0 "Ранний легкий танк"
+ medium_tank_equipment_0:0 "Ранний средний танк"
+ heavy_tank_equipment_0:0 "Ранний тяжелый танк"
+ light_tank_flame_equipment_0:0 "Ранний легкий огнеметный танк"
+ medium_tank_flame_equipment_0:0 "Ранний средний огнеметный танк"
+ heavy_tank_flame_equipment_0:0 "Ранний тяжелый огнеметный танк"
+ light_tank_aa_equipment_0:0 "Ранняя легкая ЗСУ"
+ medium_tank_aa_equipment_0:0 "Ранняя средняя ЗСУ"
+ heavy_tank_aa_equipment_0:0 "Ранняя тяжелая ЗСУ"
+ light_tank_destroyer_equipment_0:0 "Ранний легкий истребитель танков"
+ medium_tank_destroyer_equipment_0:0 "Ранний средний истребитель танков"
+ heavy_tank_destroyer_equipment_0:0 "Ранний тяжелый истребитель танков"
+ light_tank_artillery_equipment_0:0 "Ранняя легкая САУ"
+ medium_tank_artillery_equipment_0:0 "Ранняя средняя САУ"
+ heavy_tank_artillery_equipment_0:0 "Ранняя тяжелая САУ"
  
- light_tank_amphibious_chassis_0:0 "Early Light Tank Chassis (Amphibious)"
- light_tank_artillery_chassis_0:0 "Early Light SP Artillery"
- light_tank_destroyer_chassis_0:0 "Early Light Tank Destroyer"
- light_tank_aa_chassis_0:0 "Early Light SP Anti-Air"
- medium_tank_chassis_0:0 "Early Medium Tank Chassis"
- medium_tank_amphibious_chassis_0:0 "Early Medium Tank Chassis (Amphibious)"
- medium_tank_aa_chassis_0:0 "Early Medium SP Anti-Air"
- heavy_tank_amphibious_chassis_0:0 "Early Heavy Tank Chassis (Amphibious)"
- heavy_tank_artillery_chassis_0:0 "Early Heavy SP Artillery"
- heavy_tank_destroyer_chassis_0:0 "Early Heavy Tank Destroyer"
- heavy_tank_aa_chassis_0:0 "Early Heavy SP Anti-Air"
- medium_tank_flame_chassis_0:0 "Early Medium Flame Tank"
- heavy_tank_flame_chassis_0:0 "Early Heavy Flame Tank"
+ light_tank_amphibious_chassis_0:0 "Шасси раннего легкого танка (Амфибия)"
+ light_tank_artillery_chassis_0:0 "Ранняя легкая САУ"
+ light_tank_destroyer_chassis_0:0 "Ранний легкий истребитель танков"
+ light_tank_aa_chassis_0:0 "Ранняя легкая ЗСУ"
+ medium_tank_chassis_0:0 "Шасси раннего среднего танка"
+ medium_tank_amphibious_chassis_0:0 "Шасси раннего среднего танка (Амфибия)"
+ medium_tank_aa_chassis_0:0 "Ранняя средняя ЗСУ"
+ heavy_tank_amphibious_chassis_0:0 "Шасси раннего тяжелого танка (Амфибия)"
+ heavy_tank_artillery_chassis_0:0 "Ранняя тяжелая САУ"
+ heavy_tank_destroyer_chassis_0:0 "Ранний тяжелый истребитель танков"
+ heavy_tank_aa_chassis_0:0 "Ранняя тяжелая ЗСУ"
+ medium_tank_flame_chassis_0:0 "Ранний средний огнеметный танк"
+ heavy_tank_flame_chassis_0:0 "Ранний тяжелый огнеметный танк"
