--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -480,7 +480,8 @@ FEU_every_man_a_warrior:0 "Every Man a Warrior"
 FEU_reform_the_conscription:0 "Extend the Conscription System"
 FEU_names_finest:0 "[ROOT.GetAdjective] Cavalry"
 FEU_utilize_our_strengths:0 "Use Everything We Have"
-FEU_encourage_local_arms_production:0 "Local Arms Production"
+
+FEU_develop_capitalstate:0 "Develop [ROOT.capital.GetName]"
 
  ##########
 
